# chatbot

./: .env.example  .gitignore  AGENTS.md  README.md  gen_proto.sh  install_librocketmq.sh  pyproject.toml
src/chatbot/: bootstrap.py  main.py  settings.py
src/chatbot/agent/: graph.py  llm.py  prompts.py  state.py  tools.py  window.py
src/chatbot/consumer/: message_consumer.py
src/chatbot/dal/mysql/: agent_service.py  client.py  memory_service.py  models.py
src/chatbot/dal/redis/: client.py  keys.py  service.py
src/chatbot/dal/redis/lua/: bucket_refund.lua  bucket_take.lua
src/chatbot/dal/rpc/: action.py  aigc.py  im.py
src/chatbot/memory/: episodic.py  style.py  summary.py
src/chatbot/planner/: decision.py  llm.py  planner.py  prompts.py  quality.py  triggers.py
src/chatbot/proto/: action.proto  aigc.proto  common.proto  im.proto
src/chatbot/scheduler/: send_scheduler.py
src/chatbot/utils/: json.py  time.py  web_search.py
